# nlSearch

./: .env.template  .gitignore  BLUEPRINT.md  CMakeLists.txt  Dockerfile  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  docker-compose.yml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
backend/: CMakeLists.txt  config.json  main.cpp  main.py
backend/api/: routes.py  schemas.py
backend/include/api/: search_service.h
backend/include/core/: vector_search.h
backend/include/utils/: image_utils.h
backend/models/: storage.py
backend/protos/: search_service.proto
backend/services/: embedding.py  search.py
backend/src/: CMakeLists.txt  main.cpp
backend/src/api/: search_service.cpp
backend/src/core/: vector_search.cpp
backend/src/utils/: image_utils.cpp
frontend/: README.md  app.py  index.html  next.config.js  package.json  style.css  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx
frontend/src/components/: Footer.tsx  Header.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: _app.tsx  albums.tsx  index.tsx  search.tsx  upload.tsx
frontend/src/pages/api/: albums.ts  info.ts  media-search.ts  search.ts  upload.ts
frontend/src/styles/: globals.css
proto/: search.proto
scripts/: build_backend.sh  download_models.py  run_docker.sh
tests/: test_search_engine.py
